Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-16494

[C++] Fix nightly builds with 'std::stringstream ss' has incomplete type and cannot be defined

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • 9.0.0
    • C++

    Description

      Some nightly packaging jobs have failed with the following error:

      /build/arrow-cpp-ext_1651835658881/work/cpp/src/arrow/dataset/file_csv.cc:91:25: error: aggregate 'std::stringstream ss' has incomplete type and cannot be defined
         91 |       std::stringstream ss; 

      This was introduced on https://issues.apache.org/jira/browse/ARROW-16436

      Attachments

        Issue Links

          Activity

            People

              raulcd Raúl Cumplido
              raulcd Raúl Cumplido
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1.5h
                  1.5h