ARROW-16494: [C++] Add missing include that is making some packaging jobs fail