cpp/src/arrow/dataset/file_csv.cc
@@ -19,6 +19,7 @@
 
 #include <algorithm>
 #include <memory>
+#include <sstream>
 #include <string>
 #include <unordered_set>
 #include <utility>
